# datafusion-stubs

./: .pre-commit-config.yaml  404.html  README.md  index.html  objects.inv  setup.cfg  setup.py
api/context/: index.html
api/dataframe/: index.html
api/functions/: index.html
api/logical/: index.html
api/substrait/: index.html
datafusion-stubs/: __init__.pyi  common.pyi  expr.pyi  functions.pyi  object_store.pyi  substrait.pyi
datafusion-stubs/_internal/: __init__.pyi  catalog.pyi  config.pyi  context.pyi  dataframe.pyi  functions.pyi  physical_plan.pyi  record_batch.pyi  store.pyi  substrait.pyi  udaf.pyi  udf.pyi
datafusion-stubs/_internal/common/: __init__.pyi  data_type.pyi  df_field.pyi  df_schema.pyi  function.pyi  schema.pyi
datafusion-stubs/_internal/expr/: __init__.pyi  aggregate.pyi  aggregate_expr.pyi  alias.pyi  analyze.pyi  between.pyi  binary_expr.pyi  bool_expr.pyi  case.pyi  cast.pyi  column.pyi  conditional_expr.pyi  create_memory_table.pyi  create_view.pyi  cross_join.pyi  distinct.pyi  drop_table.pyi  empty_relation.pyi  exists.pyi  explain.pyi  extension.pyi  filter.pyi  grouping_set.pyi  in_list.pyi  in_subquery.pyi  indexed_field.pyi  join.pyi  like.pyi  limit.pyi  literal.pyi  placeholder.pyi  projection.pyi  repartition.pyi  scalar_function.pyi  scalar_subquery.pyi  scalar_variable.pyi  signature.pyi  sort.pyi  subquery.pyi  subquery_alias.pyi  (+3 more)
datafusion-stubs/_internal/sql/: logical.pyi
reference/: index.html
search/: search_index.json
