[metadata]
name = datafusion_stubs
version = 0.0.3
description = PEP 561 type stubs for Apache DataFusion Python Bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3ok/datafusion-stubs
author = Reda Bouaida
author_email = reda.bouaida@outlook.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = datafusion-stubs

[options.package_data]
datafusion_stubs =
    py.typed
